# Crawler-Simulation

./: README.md
NE/: crawler_startgenes_v1
NE/build-neuroevolution/: CMakeCache.txt  Makefile  cmake_install.cmake  main  neuroevolution.cbp
NE/neuroevolution/: CMakeLists.txt  main.cpp
krabbler_v5/: model.config  model.sdf
plugins/ActuatorPlugin/: CCrawler.cpp  CCrawler.h  CMakeLists.txt
plugins/build-ActuatorPlugin/: ActuatorPlugin.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
plugins/simulation/: CMakeLists.txt  CTestPresets.cpp  CTestPresets.h
worlds/: crawler.world
